--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,7 @@
       <div class="container">
         <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#navbar-collapse"
           aria-expanded="false"> <span class="sr-only">Toggle navigation</span>
-          &#x2630;</button> <a href="./index.html" class="navbar-brand">Roux Meetups</a>
+          &#x2630;</button> <a href="./index.html" class="navbar-brand">Manibala Meetups</a>
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav ml-auto">
             <li class="nav-item"> <a href="./index.html" class="nav-link">Home</a>
@@ -33,9 +33,9 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="./speakers.html">All Speakers</a>
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Lorenzo Garcia</a>
-                <a class="dropdown-item" href="./Hillary_Goldwynn.html">Hilary Goldywynn Post</a>
-                <a class="dropdown-item" href="#">Riley Rudolph Rewington</a>
+                <a class="dropdown-item" href="#">Vexility Gaming</a>
+                <a class="dropdown-item" href="./Hillary_Goldwynn.html">Story Teller Post</a>
+                <a class="dropdown-item" href="#">Kidz Learning Stations</a>
               </div>
             </li>
             <li class="nav-item"> <a href="./feedback.html" class="nav-link">Feedback</a>
@@ -53,33 +53,33 @@
         <div class="col-md text-center">
           <h4 class="speakerslist-title">Art in Full Bloom</h4>
           <div class="speakerslist-name">with
-            <a href="#">Lorenzo Garcia</a>
+            <a href="#">Vexility Gaming Post</a>
           </div>
           <div class="speakerslist-info mt-2"> <a href="#">
               <img class="speakerslist-img rounded-circle" src="./images/speakers/Lorenzo_Garcia_tn.jpg"
-                alt="Photo of Lorenzo Garcia">
+                alt="Photo of Vexility Gaming">
             </a>
           </div>
         </div>
         <div class="col-md text-center">
           <h4 class="speakerslist-title">Deep Sea Wonders</h4>
           <div class="speakerslist-name">with
-            <a href="./Hillary_Goldwynn.html">Hilary Goldywynn Post</a>
+            <a href="./Hillary_Goldwynn.html">Kidz Learning Stations</a>
           </div>
           <p class="speakerslist-info mt-2"> <a href="./Hillary_Goldwynn.html">
               <img class="speakerslist-img rounded-circle" src="./images/speakers/Hillary_Goldwynn_tn.jpg"
-                alt="Photo of Hilary Goldywynn Post">
+                alt="Photo of Kidz Learning Stations Post">
             </a>
           </p>
         </div>
         <div class="col-md text-center">
           <h4 class="speakerslist-title">The Art of Abstract</h4>
           <div class="speakerslist-name">with
-            <a href="#">Riley Rudolph Rewington</a>
+            <a href="#">Software Developer</a>
           </div>
           <p class="speakerslist-info mt-2"> <a href="#">
               <img class="speakerslist-img rounded-circle" src="./images/speakers/Riley_Rewington_tn.jpg"
-                alt="Photo of Riley Rudolph Rewington">
+                alt="Photo of Software Developer">
             </a>
           </p>
         </div>
